# vibemcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
changelog/: 002-definir-yaml-frontmatter.md  004-definir-interfaz-mcp.md  014-unificar-imports-fastmcp.md  016-alinear-api-spec.md  017-auth-bearer-token.md
claude/commands/: next-task.md  run-plan.md  session-start.md  solve-task.md  status.md  task-breakdown.md  vibe-init.md
docs/: LLM_CONTEXT.md  api-reference.md  architecture-diagram.md  architecture.md  client-configuration.md  deployment.md  mcp-interface.md  resources.md  sqlite-schema.md  task-010-quick-reference.md  tools-write-usage.md  vibe-structure.md
docs/changelog/: 001-documentar-estructura-vibe.md  003-disenar-schema-sqlite.md  005-crear-workspace-ejemplo.md  006-setup-proyecto-python.md  007-implementar-indexador.md  015-search-snippets-fts5.md
docs/plans/: feature-based-plans.md
examples/: example_server.py
references/: 01-vibe-mcp-project-v2.md  02-vibe-mcp-plan-v2.md  03-claude-code-skills.md  architecture-webhooks.md  diagrams-webhooks.md  python-rules-template.md  vibe-mcp-project.md  webhooks.md
references/.claude/: settings.local.json
review/: TASK_008_SUMMARY.md  task-010-implementation-summary.md
src/: __init__.py  main.py
src/vibe_mcp/: __init__.py  auth.py  config.py  main.py  prompts.py  resources.py  sync.py  tools.py  tools_webhooks.py  (+3 more)
tests/: __init__.py  test_auth.py  test_config.py  test_main.py  test_prompts.py  test_resources.py  test_sync.py  test_tools.py  test_tools_write.py  test_webhooks.py
(+45 files in other folders)
