[project]
name = "vibe-mcp"
version = "0.1.0"
description = "MCP server for centralizing project context across AI agents"
requires-python = ">=3.11"
authors = [{ name = "macward" }]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
vibe-mcp = "vibe_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]  # Line too long - handled by formatter, not practical for SQL strings

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow long lines in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
